--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
+    "dotenv": "^17.2.3",
+    "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.3",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "@types/node": "^24.6.0",
+    "@types/node": "^24.9.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.0.4",
