--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.548.0",
     "motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.2.0",
